--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -24,3 +24,5 @@ html(lang='en')
         .container-fluid
             .main-content.animated.fadeIn
                 block content
+
+        script(src='/scripts/main.js')
